Revise engine progress documentation and README for consistency, additional examples, and updated build/run instructions